[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/drawer/drawer_row.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Gidole/Gidole-Regular-xbig.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/Gidole/Gidole-Regular-mid.tres" type="DynamicFont" id=3]

[node name="Drawer_row" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 580 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RowTitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
follow_focus = true
scroll_vertical_enabled = false

[node name="IconsContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_top = 466.0
margin_right = 1024.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
margin_top = 528.0
margin_right = 1024.0
margin_bottom = 557.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
